--- a/style.css
+++ b/style.css
@@ -1,29 +1,21 @@
-body {
-    background: lightblue;
-}
 img {
     height: 50%;
     width: 50%;
 }
-.button {
+.response {
+    background: black;
+    color: white;
+    font-size: 18px;
     width: 39%;
-    padding: 10px;
+    padding: 30px;
     border-radius: 50px;
     outline: none;
     border: none;
     margin: 20px;
 }
-#start-screen button{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    height: 30px;
-    width: 100px;
-
-}
-#game-screen img{
-    height: 500px;
-    width: 500px;
+.response:hover{
+    background:white;
+    color: black;
 }
 #buttons {
     display: flex;
@@ -32,22 +24,52 @@ img {
     justify-content: center;
     margin: 0 auto;
 }
-#start-screen{
-    margin: 0 auto;
-}
-
 #game-screen{
     width: 50%;
+    text-align: center;
+    margin: 100px auto;
+}
+#game-screen img{
+    max-width: 500px;
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+#start-screen{
+    text-align: center;
     margin: 0 auto;
 }
+button{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 100px;
+    border-radius: 50px;
+    outline: none;
+    border: 2px solid black;
+    margin: 10px;
+}
+#easy-button {
+    background: #42a2d6;
+}
+#medium-button {
+    background: #ffdc00;
+}
+#hard-button {
+    background: #ff4238;
+}
+
+
 .hide {
     display: none;
 }
 
 /* Media Queries */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) {
     body {
-        background: white;
+        background: lightslategray;
     }
 }
 @media screen and (max-width: 1024px) {
