--- a/style.css
+++ b/style.css
@@ -1,28 +1,21 @@
 img {
-    height: 50%;
-    width: 50%;
+    width: 40%;
+    height: auto;
 }
 .response {
+    width: 39%;
     background: black;
     color: white;
-    font-size: 18px;
-    width: 39%;
-    padding: 30px;
-    border-radius: 50px;
+    border-radius: 10px;
     outline: none;
     border: none;
+    padding: 30px;
     margin: 20px;
+    font-size: 20px;
 }
 .response:hover{
     background:white;
     color: black;
-}
-#buttons {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
 }
 .direction{
     display: flex;
@@ -34,24 +27,46 @@ img {
     border-radius: 5px;
     width: 40px;
     height: 100px;
-    font-size: 20px;
-}
-.button{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    height: 30px;
-    width: 100px;
-    border-radius: 50px;
-    outline: none;
-    border: 2px solid black;
-    margin: 0px;
+    font-size: 24px;
 }
 #responses{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+#buttons {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0;
+}
+#game-screen{
+    width: 55%;
+    text-align: center;
+    margin: 100px auto;
+}
+#game-screen img{
+    max-width: 400px;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    object-fit: contain;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 100px;
+    border-radius: 50px;
+    outline: none;
+    border: 2px solid black;
+    margin: 0 auto;
+}
+#start-screen{
+    text-align: center;
+    margin: 100px auto;
 }
 #easy-button {
     background: #42a2d6;
@@ -61,21 +76,6 @@ img {
 }
 #hard-button {
     background: #ff4238;
-}
-#game-screen{
-    width: 50%;
-    text-align: center;
-    margin: 10px auto;
-}
-#game-screen img{
-    max-width: 500px;
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-}
-#start-screen{
-    text-align: center;
-    margin: 0 auto;
 }
 
 
