--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 img {
     width: 40%;
     height: auto;
+    margin: 50px;
 }
 .response {
     width: 39%;
@@ -14,8 +15,7 @@ img {
     font-size: 20px;
 }
 .response:hover{
-    background:white;
-    color: black;
+    border: 3px solid black;
 }
 .direction{
     display: flex;
@@ -28,6 +28,10 @@ img {
     width: 40px;
     height: 100px;
     font-size: 24px;
+}
+.direction:hover{
+    background:white;
+    color: black;
 }
 #responses{
     display: flex;
@@ -52,6 +56,7 @@ img {
     height: 400px;
     border-radius: 50%;
     object-fit: contain;
+    margin: 10px;
 }
 .button{
     display: flex;
@@ -68,21 +73,18 @@ img {
     text-align: center;
     margin: 100px auto;
 }
-#easy-button {
+#start-button {
     background: #42a2d6;
 }
-#medium-button {
-    background: #ffdc00;
-}
-#hard-button {
-    background: #ff4238;
-}
-
-
 .hide {
     display: none;
 }
-
+.correct {
+    background: green
+}
+.incorrect {
+    background: red
+}
 /* Media Queries */
 @media screen and (min-width: 1024px) {
     body {
@@ -91,17 +93,17 @@ img {
 }
 @media screen and (max-width: 1024px) {
     body {
-        background: blue;
+        background: #42a2d6;
     }
 @media screen and (max-width: 768px) {
     body {
-        background: yellow;
+        background: #ffdc00
     }
 }
 }
 @media screen and (max-width: 480px) {
     body {
-        background: red;
+        background: #ff4238;
     }
     .button {
         width: 100%;
