--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body {
+html {
     background-color: lightgray;
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 24px;
 }
 img {
     width: 40%;
@@ -60,6 +62,10 @@ img {
     border-radius: 50%;
     object-fit: contain;
     margin: 10px;
+}
+#question {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 24px;
 }
 .button{
     display: flex;
